@@ -5,7 +5,8 @@
 
 		requires: [
 			'CMDBuild.core.constants.Proxy',
-			'CMDBuild.proxy.index.Json'
+			'CMDBuild.proxy.index.Json',
+			'CMDBuild.proxy.management.widget.openReport.ParametersWindow'
 		],
 
 		/**
@@ -25,7 +26,8 @@
 		 * @cfg {Array}
 		 */
 		cmfgCatchedFunctions: [
-			'onWidgetOpenReportModalWindowShow'
+			'onWidgetOpenReportModalWindowDownloadButtonClick',
+			'widgetOpenReportModalWindowConfigureAndShow'
 		],
 
 		/**
@@ -50,20 +52,42 @@
 			this.callParent(arguments);
 
 			this.view = Ext.create('CMDBuild.view.management.widget.openReport.ModalWindow', { delegate: this });
-
-			this.setViewTitle(this.cmfg('widgetOpenReportConfigurationGet', CMDBuild.core.constants.Proxy.LABEL));
-
-			if (!Ext.isEmpty(this.view) && Ext.isString(this.extension) && Ext.Array.contains(this.browserManagedFormats, this.extension))
-				this.view.show();
 		},
 
 		/**
+		 * @param {Boolean} forceDownload
+		 *
 		 * @returns {Void}
 		 */
-		onWidgetOpenReportModalWindowShow: function () {
-			if (!Ext.isEmpty(this.extension)) {
-				this.view.removeAll();
+		onWidgetOpenReportModalWindowDownloadButtonClick: function () {
+			var params = {};
+			params[CMDBuild.core.constants.Proxy.FORCE_DOWNLOAD_PARAM_KEY] = true;
 
+			CMDBuild.proxy.management.widget.openReport.ParametersWindow.download({
+				buildRuntimeForm: true,
+				params: params,
+				loadMask: this.view
+			});
+		},
+
+		/**
+		 * @param {Object} parameters
+		 * @param {String} parameters.extension
+		 *
+		 * @returns {Void}
+		 */
+		widgetOpenReportModalWindowConfigureAndShow: function (parameters) {
+			parameters = Ext.isObject(parameters) ? parameters : {};
+
+			// Error handling
+				if (!Ext.isObject(this.view) || Ext.Object.isEmpty(this.view))
+					return _error('widgetOpenReportModalWindowConfigureAndShow(): unmanaged view property', this, this.view);
+			// END: Error handling
+
+			if (Ext.isString(parameters.extension) && !Ext.isEmpty(parameters.extension) && Ext.Array.contains(this.browserManagedFormats, parameters.extension)) {
+				this.setViewTitle(this.cmfg('widgetOpenReportConfigurationGet', CMDBuild.core.constants.Proxy.LABEL));
+
+				this.view.removeAll();
 				this.view.add({
 					xtype: 'component',
 
@@ -72,6 +96,9 @@
 						src: CMDBuild.proxy.index.Json.report.factory.print + '?donotdelete=true' // Add parameter to avoid report delete
 					}
 				});
+				this.view.show();
+			} else { // Extension not managed from browser
+				this.cmfg('onWidgetOpenReportModalWindowDownloadButtonClick');
 			}
 		}
 	});
